--- a/templates/home.html
+++ b/templates/home.html
@@ -13,6 +13,6 @@
         <p><a href = "/genereRadio">Inserisci il genere da una lista di radiobutton</a></p>
         <p><a href = "/genereCheck">Inserisci il genere da una lista di checkbox</a></p>
         <p><a href = "/budget">Visualizza i film senza budget</a></p>
-        <p><a href = "/grafico">visualizzare un grafico con il numero di film per ogni genere.</a></p>
+        <p><a href = "/grafico">visualizzare un grafico con il numero di film per ogni lingua.</a></p>
     </body>
 </html>
